--- a/css/output.css
+++ b/css/output.css
@@ -179,6 +179,9 @@
   }
 }
 @layer utilities {
+  .visible {
+    visibility: visible;
+  }
   .absolute {
     position: absolute;
   }
@@ -188,11 +191,17 @@
   .top-0 {
     top: calc(var(--spacing) * 0);
   }
+  .top-1 {
+    top: calc(var(--spacing) * 1);
+  }
   .top-1\/2 {
     top: calc(1/2 * 100%);
   }
   .left-0 {
     left: calc(var(--spacing) * 0);
+  }
+  .left-1 {
+    left: calc(var(--spacing) * 1);
   }
   .left-1\/2 {
     left: calc(1/2 * 100%);
@@ -394,6 +403,10 @@
   }
   .border-collapse {
     border-collapse: collapse;
+  }
+  .-translate-x-1 {
+    --tw-translate-x: calc(var(--spacing) * -1);
+    translate: var(--tw-translate-x) var(--tw-translate-y);
   }
   .-translate-x-1\/2 {
     --tw-translate-x: calc(calc(1/2 * 100%) * -1);
@@ -902,6 +915,21 @@
         margin-block-start: calc(calc(var(--spacing) * 8) * var(--tw-space-y-reverse));
         margin-block-end: calc(calc(var(--spacing) * 8) * calc(1 - var(--tw-space-y-reverse)));
       }
+    }
+  }
+  .max-md\:\!pt-4 {
+    @media (width < 48rem) {
+      padding-top: calc(var(--spacing) * 4) !important;
+    }
+  }
+  .max-md\:\!pt-6 {
+    @media (width < 48rem) {
+      padding-top: calc(var(--spacing) * 6) !important;
+    }
+  }
+  .max-md\:\!pt-10 {
+    @media (width < 48rem) {
+      padding-top: calc(var(--spacing) * 10) !important;
     }
   }
   .max-md\:\!pt-25 {
